--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitekit",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "A lil sugar for connecting jQuery widgets to your markup",
   "main": "index.js",
   "scripts": {
@@ -16,6 +16,9 @@
     "jquery-ui": "^1.12.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
     "gulp-watch": "^4.3.9"
   }
 }
