--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitekit",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "A lil sugar for connecting jQuery widgets to your markup",
   "main": "index.js",
   "scripts": {
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.0",
     "jquery": "^3.1.0",
-    "jquery-ui": "^1.12.0"
+    "jquery-ui": "^1.12.0",
+    "jquery.transit": "^0.9.12"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
