--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sitekit",
   "version": "1.1.1",
+  "versionDescription": "The scrolling update",
   "description": "A lil sugar for connecting jQuery widgets to your markup",
   "main": "index.js",
   "scripts": {
