--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sitekit",
-  "version": "1.1.4",
-  "versionDescription": "The console update",
+  "version": "1.2.5",
+  "versionDescription": "The MAGIC middleware update",
   "description": "A lil sugar for connecting jQuery widgets to your markup",
   "main": "index.js",
   "scripts": {
