--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitekit",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "description": "A lil sugar for connecting jQuery widgets to your markup",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "jquery.transit": "^0.9.12"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
