--- a/package.json
+++ b/package.json
@@ -12,16 +12,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.6.0",
-    "jquery": "^3.1.0",
-    "jquery-ui": "^1.12.0",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "async": "^2.6.2"
+  },
+  "peerDependencies": {
+    "jquery": "^3.4.0",
+    "jquery-ui": "^1.12.1",
     "jquery.transit": "^0.9.12"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
-    "gulp-watch": "^4.3.9"
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.3",
+    "gulp-watch": "^5.0.1",
+    "jquery": "^3.4.0",
+    "jquery-ui": "^1.12.1",
+    "jquery.transit": "^0.9.12",
+    "tinyify": "^2.5.0"
   }
 }
