--- a/package.json
+++ b/package.json
@@ -1,35 +1,48 @@
 {
   "name": "sitekit",
-  "version": "1.2.21",
-  "description": "A lil sugar for connecting jQuery widgets to your markup",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node util/build.js",
-    "build-watch": "node util/build.js --watch"
-  },
-  "repository": "manspaniel/node-sitekit",
+  "version": "1.0.0",
+  "description": "",
+  "main": "lib/index.js",
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "async": "^2.6.2"
+  "scripts": {
+    "clean": "rm dist/bundle.js",
+    "dev": "npx rollup --config './scripts/rollup.dev.js' --watch",
+    "prod": "npx rollup --config './scripts/rollup.dev.js'"
   },
-  "peerDependencies": {
-    "jquery": "^3.4.0",
-    "jquery-ui": "^1.12.1",
-    "jquery.transit": "^0.9.12"
+  "dependencies": {
+    "history": "^4.10.1"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^10.0.0",
-    "browserify": "^16.2.3",
-    "gulp-watch": "^5.0.1",
-    "jquery": "^3.4.0",
-    "jquery-ui": "^1.12.1",
-    "jquery.transit": "^0.9.12",
-    "tinyify": "^2.5.0"
+    "rollup-plugin-commonjs": "^10.1.0",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-typescript": "^7.8.3",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@types/history": "^4.7.5",
+    "autoprefixer": "^9.7.4",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-template": "^6.2.0",
+    "node-sass": "^4.13.1",
+    "poi": "^12.7.5",
+    "postcss-loader": "^3.0.0",
+    "rollup": "^2.0.6",
+    "rollup-plugin-babel": "^4.4.0",
+    "sass": "^1.26.2",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "typescript": "^3.8.3",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.42.0",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
