--- a/package.json
+++ b/package.json
@@ -2,19 +2,31 @@
   "name": "sitekit",
   "version": "1.2.21",
   "description": "A lil sugar for connecting jQuery widgets to your markup",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "types": "dist",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node util/build.js",
-    "build-watch": "node util/build.js --watch"
+    "dev": "rollup --config ./scripts/rollup.config.dev.js --watch",
+    "prod": "rollup --config ./scripts/rollup.config.prod.js && tsc"
   },
   "repository": "manspaniel/node-sitekit",
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "async": "^2.6.2"
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.1",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/preset-typescript": "^7.10.1",
+    "@babel/runtime-corejs3": "^7.10.2",
+    "async": "^2.6.2",
+    "core-js": "^3.6.5"
   },
   "peerDependencies": {
     "jquery": "^3.4.0",
@@ -22,6 +34,12 @@
     "jquery.transit": "^0.9.12"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.10.2",
+    "@rollup/plugin-babel": "^5.0.3",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.1",
+    "@rollup/plugin-replace": "^2.3.3",
+    "babel-plugin-macros": "^2.8.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^10.0.0",
@@ -30,6 +48,8 @@
     "jquery": "^3.4.0",
     "jquery-ui": "^1.12.1",
     "jquery.transit": "^0.9.12",
+    "rollup": "^2.16.1",
+    "rollup-plugin-styles": "^3.8.2",
     "tinyify": "^2.5.0"
   }
 }
