--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "@babel/preset-react": "^7.10.1",
     "@babel/preset-typescript": "^7.10.1",
     "@babel/runtime-corejs3": "^7.10.2",
+    "@types/jquery": "^3.3.38",
     "async": "^2.6.2",
-    "core-js": "^3.6.5"
+    "core-js": "^3.6.5",
+    "rollup-plugin-analyzer": "^3.2.3",
+    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-visualizer": "^4.0.4"
   },
   "peerDependencies": {
     "jquery": "^3.4.0",
